[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Shytikov Kirill <k.shytikov@webwave.work>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
sqlmodel = "^0.0.22"
sqlalchemy-utc = "^0.14.0"
pydantic-settings = "^2.7.0"
pydantic = {extras = ["email"], version = "^2.10.4"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.2.0"
python-jose = "^3.3.0"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = 'app.__main__:start'
migrate = 'app.db.migrations:migrate'
